--- a/src/app/student/lista-cursos/lista-cursos.component.html
+++ b/src/app/student/lista-cursos/lista-cursos.component.html
@@ -20,35 +20,48 @@
                                   
                                   <td>{{curso.anio}}</td>
                                   <td>{{curso.semestre}}</td>
-                                  <td>{{curso.fechaInicio | date}}</td>
+                                  <td>{{curso.fechaInicio | date }}</td>
                                   <td>{{curso.fechaFin | date}}</td>
-                                  
-                                  <div *ngIf="!(estaInscripto(curso)); else desistir">
-                                      <td><button class="btn btn-primary" (click)="inscripcionACurso(curso)" confirm="Seguro que desea inscribirse?" >Inscribir</button></td>
-                                  </div>
-                                  <ng-template #desistir>
-                                      <td><button class="btn btn-danger" (click)="desistirACurso(curso)" confirm="Seguro que desea desistir?" >Desistir</button></td>
-                                  </ng-template>
-                                  <td><button class="btn btn-success" (click)="openModal(template,curso.horarios)" >Horarios</button></td>
-                                  <ng-template #template>
-                                        <div class="modal-header">
-                                          <h4 class="modal-title pull-left">Horarios</h4>
-                                          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-                                            <span aria-hidden="true">&times;</span>
-                                          </button>
-                                        </div>
-                                        <div class="modal-body">
-                                          <div *ngFor="let horario of curso.horarios">
-                                            {{horario.dia}}    {{horario.horaInicio}}     {{horario.horaFin}}
-                                          </div>
-                                        </div>
+                                  <div *ngIf="!(hoy > curso.fechaFin);else calificaciones">
+                                      <div *ngIf="!(estaInscripto(curso)); else desistir">
+                                          <td><button class="btn btn-primary" (click)="inscripcionACurso(curso)" confirm="Seguro que desea inscribirse?" >Inscribir</button></td>
+                                      </div>
+                                      <ng-template #desistir>
+                                          <td><button class="btn btn-danger" (click)="desistirACurso(curso)" confirm="Seguro que desea desistir?" >Desistir</button></td>
                                       </ng-template>
-                             
-                             
-                             
-                             
-                             
-                                </tr>
+                                      <td><button class="btn btn-success" (click)="openModal(template,curso.horarios)" >Horarios</button></td>
+                                      <ng-template #template>
+                                            <div class="modal-header">
+                                              <h4 class="modal-title pull-left">Horarios</h4>
+                                              <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                                                <span aria-hidden="true">&times;</span>
+                                              </button>
+                                            </div>
+                                            <div class="modal-body">
+                                              <div *ngFor="let horario of curso.horarios">
+                                                {{horario.dia}}    {{horario.horaInicio}}     {{horario.horaFin}}
+                                              </div>
+                                            </div>
+                                      </ng-template>
+                                  </div>
+                                  <ng-template #calificaciones>
+                                    <td><button class="btn btn-primary" (click)="openModal(templateCalificaciones,curso.cursoEstudiante)" >Ver Calificaciones</button></td>
+                                    <td></td>
+                                  </ng-template>
+                                    <ng-template #templateCalificaciones>
+                                      <div class="modal-header">
+                                        <h4 class="modal-title pull-left">Calificaciones</h4>
+                                        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                                          <span aria-hidden="true">&times;</span>
+                                        </button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <div *ngFor="let cursoEstudiante of curso.cursoEstudiante">
+                                          {{cursoEstudiante.nombre}}    {{cursoEstudiante.apellido}}     {{cursoEstudiante.nota}}
+                                        </div>
+                                      </div>
+                                    </ng-template>                                    
+                              </tr>
                           </tbody>
                       </table>
                   </div>           
