--- a/src/app/student/body-student/body-student.component.html
+++ b/src/app/student/body-student/body-student.component.html
@@ -4,8 +4,8 @@
         <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Carreras</a>
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Asignaturas</a>
         <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Grafo de Previas</a>
-        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Inscripcion a Curso</a>
-        <a class="list-group-item list-group-item-action" id="list-settings-list2" data-toggle="list" href="#list-settings2" role="tab" aria-controls="settings">Inscripcion a Examen</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Cursos</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list2" data-toggle="list" href="#list-settings2" role="tab" aria-controls="settings">Examenes</a>
         <a class="list-group-item list-group-item-action" id="list-settings-list3" data-toggle="list" href="#list-settings3" role="tab" aria-controls="settings">Calendario</a>
       </div>
     </div>
@@ -15,8 +15,8 @@
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list"><h1 class="text-center">CARRERAS</h1><app-lista-carreras></app-lista-carreras></div>
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h1 class="text-center">ASIGNATURAS</h1><app-lista-asignaturas></app-lista-asignaturas></div>
         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><h1 class="text-center">GRAFO DE PREVIAS</h1><app-grafo></app-grafo></div>
-        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">INSCRIPCION A CURSO</h1><app-lista-cursos></app-lista-cursos></div>
-        <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">INSCRIPCION A EXAMEN</h1><app-lista-examenes></app-lista-examenes></div>
+        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">CURSOS</h1><app-lista-cursos></app-lista-cursos></div>
+        <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">EXAMENES</h1><app-lista-examenes></app-lista-examenes></div>
         <div class="tab-pane fade" id="list-settings3" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">CALENDARIO</h1><app-calendario></app-calendario></div>
       </div>
     </div>
