Se saca desistir carrera Correccion en calendario correccion en listacursos y listaexamenes

--- a/src/app/director/lista-carreras/lista-carreras.component.html
+++ b/src/app/director/lista-carreras/lista-carreras.component.html
@@ -18,7 +18,9 @@
               </div> 
               <div *ngIf="esEstudiante">
                   <div *ngIf="estaInscripto(carrera); else inscripcion">
-                      <td><button class="btn btn-danger" (click)="desistirACarrera(carrera)">Desistir</button></td>
+                      <!--<td><button class="btn btn-danger" (click)="desistirACarrera(carrera)">Desistir</button></td>-->
+                      <td><button class="btn btn-primary disabled" >Inscripto</button></td>
+
                   </div>    
                       <ng-template #inscripcion>
                           <td><button class="btn btn-primary" (click)="inscripcionACarrera(carrera)">Inscribir</button></td>
