Diseño: Estilos mejorados | Calendario: Eventos aclarados

--- a/src/app/director/lista-asignaturas/lista-asignaturas.component.html
+++ b/src/app/director/lista-asignaturas/lista-asignaturas.component.html
@@ -4,6 +4,8 @@
     <thead>
       <th>Nombre</th>
       <th>Descripcion</th>
+      <th *ngIf="esDirector"></th>
+      <th *ngIf="esDirector"></th>
     </thead>
     <tbody>
       <tr *ngFor="let asignatura of asignaturas">
