--- a/src/app/admin/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/admin/lista-usuarios/lista-usuarios.component.html
@@ -2,13 +2,16 @@
 
   <input type="text" class="form-control" name="searchString" placeholder="Buscar..." [(ngModel)]="searchString">
 
-  <table class="table table-striped" >
+  <table class="table table-striped">
     <thead>
 
       <th>Nombre</th>
       <th>Apellido</th>
       <th>Username</th>
       <th>Email</th>
+      <th>Rol</th>
+      <th></th>
+      <th></th>
     </thead>
     <tbody id="test">
       <tr *ngFor="let usuario of usuarios | filter : ['nombre','apellido','username', 'email'] : searchString; let i = index">
