--- a/src/app/director/grafo/grafo.component.css
+++ b/src/app/director/grafo/grafo.component.css
@@ -3,20 +3,24 @@
   width: 100%;
   border: 1px solid lightgrey;
 }
+
 .topDiagram {
-  margin-top: 10px;
+  margin-top: 20px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom: none;
 }
+
 .bottomDiagram {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
+
 #carreraDiagram {
   background: lightgrey;
 }
+
 #asignaturaDiagram {
   background: whitesmoke;
 }
