--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
-/* @import '../node_modules/primeng/resources/themes/bootstrap/theme.css'; */
-/* @import '../node_modules/primeng/resources/primeng.min.css'; */
-@import '../node_modules/fullcalendar/dist/fullcalendar.min.css';
-@import 'bootstrap.min.css';
+
+#list-tab .list-group-item {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.col-8 {
+  max-width: 100% !important;
+}
+
+#nav-tabContent {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.container {
+  padding: 0 !important;
+  margin: 0 !important;
+}
 
 button[icon|="pi pi-angle-double"] {
-    display: none !important;
+  display: none !important;
 }
