--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm  navbar-light bg-primary">
+<nav class="navbar navbar-expand-sm  navbar-light">
   <!-- Brand -->
   <a class="navbar-brand" href="{{rol}}"><img src="assets/img/TecnoLogoHorizBlanco.png" height="40"></a>
 
