--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,9 +1,10 @@
 <div class="wrapper">
   <form class="form-signin">
     <img src="assets/img/TecnoLogoVertNegro.png" width="100%">
-    <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="username" required=""
+    <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="Usuario" required=""
       autofocus="" />
-    <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password" required="" />
+    <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Contraseña"
+      required="" />
     <label class="checkbox">
       <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Recordarme
     </label>
