--- a/src/app/director/carrera-editar/carrera-editar.component.html
+++ b/src/app/director/carrera-editar/carrera-editar.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="form group">
             <label for="creditosMinimos">Creditos Minimos</label>
-            <textarea type="text" name="creditosMinimos" class="form-control" disabled [(ngModel)]="carrera.creditosMinimos"></textarea>
+            <textarea type="text" name="creditosMinimos" class="form-control" [(ngModel)]="carrera.creditosMinimos"></textarea>
         </div>
         <input type="submit" value="Guardar" class="btn btn-primary">
         <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
