Control de errores. Ng-messages. Arreglo de inscripcion y desistir cursos y examenes

--- a/src/app/admin/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/admin/lista-usuarios/lista-usuarios.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p-growl [(value)]="msgs"></p-growl>
 
   <input type="text" class="form-control" name="searchString" placeholder="Buscar..." [(ngModel)]="searchString">
 
