--- a/src/app/admin/cargar-usuarios/cargar-usuarios.component.html
+++ b/src/app/admin/cargar-usuarios/cargar-usuarios.component.html
@@ -1,4 +1,5 @@
 <body>
+    <p-growl [(value)]="msgs"></p-growl>
 
   <p-fileUpload name="csv[]" chooseLabel="Elegir" uploadLabel="Cargar" cancelLabel="Cancelar" (onSelect)="onSelect($event)" customUpload="true" (uploadHandler)="myUploader($event)" maxFileSize="1000000">
     <ng-template pTemplate="content">
