--- a/src/app/admin/usuario-editar/usuario-editar.component.html
+++ b/src/app/admin/usuario-editar/usuario-editar.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-
+<p-growl [(value)]="msgs"></p-growl>
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
