--- a/src/app/admin/usuario-form/usuario-form.component.html
+++ b/src/app/admin/usuario-form/usuario-form.component.html
@@ -1,6 +1,7 @@
     
     <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
     <app-header></app-header>
+    <p-growl [(value)]="msgs"></p-growl>
 
 
  
