--- a/src/app/director/asignar-asignatura/asignar-asignatura.component.html
+++ b/src/app/director/asignar-asignatura/asignar-asignatura.component.html
@@ -1,3 +1,4 @@
+<p-growl [(value)]="msgs"></p-growl>
 <accordion [closeOthers]="true">
   <div *ngFor="let carrera of carreras">
     <accordion-group heading="{{carrera.nombre}}" (isOpenChange)='cargarListas(carrera)'>
