--- a/src/app/student/lista-examenes/lista-examenes.component.html
+++ b/src/app/student/lista-examenes/lista-examenes.component.html
@@ -4,7 +4,9 @@
     <div *ngFor="let carrera of carreras" >
         <accordion-group  heading="{{carrera.nombre}}">
             <accordion [closeOthers]="true">
+            
             <div class="center" *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera">
+                <div *ngIf="asignaturaCarrera.asignatura.examenes[0]">
                 <accordion-group  heading="{{asignaturaCarrera.asignatura.nombre}}">                  
                     <div class="container">
                         <table class="table table-striped" >
@@ -48,6 +50,7 @@
                         </table>
                     </div>           
                 </accordion-group>
+            </div>
             </div>
         </accordion>
           </accordion-group>
