--- a/src/app/student/lista-examenes/lista-examenes.component.html
+++ b/src/app/student/lista-examenes/lista-examenes.component.html
@@ -19,7 +19,7 @@
                                     
                                     <td>{{examen.fecha | date}}</td>
                                     <td>{{examen.hora}}</td>
-                                    <div *ngIf="!(hoy > examen.fecha);else calificaciones">
+                                    <div *ngIf="(!examen.estudianteExamen[0] || (examen.estudianteExamen[0]) && (examen.estudianteExamen[0].nota == -1 ));else calificaciones">
                                     
                                         <div *ngIf="!(estaInscripto(examen)); else desistir">
                                                 <td><button class="btn btn-primary" (click)="inscripcionAExamen(examen)" confirm="Seguro que desea inscribirse?" >Inscribir</button></td>
