--- a/src/app/director/body-director/body-director.component.html
+++ b/src/app/director/body-director/body-director.component.html
@@ -5,6 +5,7 @@
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Asignaturas</a>
         <a class="list-group-item list-group-item-action " id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Asignar Asignatura</a>
         <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Asignar Previa</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings3" role="tab" aria-controls="settings">Lista de Previas</a>
         <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings2" role="tab" aria-controls="settings">Graficar Previas</a>
       </div>
     </div>
@@ -15,6 +16,7 @@
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h1 class="text-center">ASIGNATURAS</h1><app-lista-asignaturas></app-lista-asignaturas></div>
         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><h1 class="text-center">ASIGNAR ASIGNATURA</h1><app-asignar-asignatura></app-asignar-asignatura></div>
         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">ASIGNAR PREVIA</h1><app-asignar-previa></app-asignar-previa></div>
+        <div class="tab-pane fade" id="list-settings3" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">LISTA DE PREVIAS</h1><app-lista-previas></app-lista-previas></div>
         <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">GRAFO DE PREVIAS</h1><app-grafo></app-grafo></div>
       </div>
     </div>
