--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -19,6 +19,7 @@
           <a class="dropdown-item" href="estudiante/perfil">Perfil</a>
           <div class="dropdown-divider"></div>
         </div>
+        <a class="dropdown-item" href="{{rol}}/cambiar-password">Cambiar Password</a>
         <a class="dropdown-item" (click)="logout()" href="">Salir</a>
       </div>
     </li>
